--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@ config.js
 # Ignore serviceAccountKey.json file
 secrets/
 public/authvar.json
+
+.env
+
+#ignore package-lock.json
+package-lock.json
