Mobile responsive and icon changes

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "firebase": "^10.13.0",
-    "firebase-admin": "^12.3.1"  },
+    "firebase-admin": "^12.3.1",
+    "it": "^1.1.1"
+  },
   "name": "sip-truncking",
   "version": "1.0.0",
   "main": "index.js",
